fixed homepage image z-index

--- a/source/assets/css/main.scss
+++ b/source/assets/css/main.scss
@@ -423,7 +423,7 @@ main {
 
   img {
     opacity: .5;
-    z-index: 100;
+    z-index: 90;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
     &.logo {
